# pdf2tree

./: .g.conf  .gitignore  CHANGELOG.md  README.md  TODO.md  examples-post-processing-only.sh  examples-processing.sh  examples.sh  pdf2tree.sh  pdf_sample-post-processing-only.sh  pdf_sample-processing.sh  pdf_sample.sh  pdf_to_tree.sh  pyproject.toml  requirements.txt  tests.sh  venv.sh
docs/: 1_pdf2tree_requirements.md  2_pdf_sample_requirements.md  requirements_DRAFT.md
pdf_sample/: pdf_sample.tex
src/pdf2tree/: __init__.py  __main__.py  core.py  latex.py
src/pdf_to_tree/: __init__.py  __main__.py  core.py
tests/: test_cli_venv.py  test_pdf_sample_cli.py  test_update_check.py  test_version_flag.py
tests/stubs/: pdf2tree_gemini_stub.py
tests/stubs/google/: generativeai.py
