[build-system]
requires = ["setuptools>=68.0.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2tree"
version = "0.0.0"
description = "Initialize a project with prompts, agents, and templates from the pdf2tree repository."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Astral" }
]
keywords = ["astral", "uv", "project", "prompts", "templates"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Code Generators",
]

[project.urls]
Homepage = "https://github.com/ogekuri/pdf2tree"
Repository = "https://github.com/ogekuri/pdf2tree"

[project.scripts]
pdf2tree = "pdf2tree.core:main"
pdf2md = "pdf2tree.core:main"

[tool.setuptools]
packages = ["pdf2tree", "pdf_to_tree"]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
pdf2tree = [
  "resources/prompts/*.md",
  "resources/kiro/*.json",
  "resources/templates/*.md",
  "resources/vscode/settings.json",
]

[tool.uv.forms.pdf2tree-init]
description = "Run the Req initialize workflow with uvx --form pdf2tree-init."
command = "pdf2tree"
