[build-system]
requires = ["setuptools>=68.0.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2tree"
version = "0.0.4"
description = "Convert PDF documents into a folder tree with Markdown content and extracted assets."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pymupdf>=1.26.6",
  "pymupdf4llm",
  "pymupdf_layout",
  "pix2tex",
  "pillow",
  "google-generativeai",
]
license = { file = "LICENSE" }
authors = [
  { name = "Ogekuri" }
]
keywords = ["pdf", "markdown", "pymupdf", "extraction", "tree"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/ogekuri/pdf2tree"
Repository = "https://github.com/ogekuri/pdf2tree"

[project.scripts]
pdf2tree = "pdf2tree.core:main"
pdf2md = "pdf2tree.core:main"

[tool.setuptools]
packages = ["pdf2tree"]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
pdf2tree = [
  "resources/prompts/*.md",
  "resources/kiro/*.json",
  "resources/templates/*.md",
  "resources/vscode/settings.json",
]
